Created custom DAO + service exceptions and applied them to the layers; removed redundant throws SQL exception